@@ -38,6 +38,8 @@
 <p>2014-12-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/xpm.c (ReadXPMImage): Detect short XPM rows and report
+error to user rather than overrunning a buffer.</li>
 <li>coders/pcx.c (ReadPCXImage): Validate that header bytes per line
 is sufficient to contain the indicated data.</li>
 <li>coders/pdb.c (ReadPDBImage): Fix indexes array overrun for 2 and
