@@ -1,5 +1,8 @@
 2014-12-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/xpm.c (ReadXPMImage): Detect short XPM rows and report
+	error to user rather than overrunning a buffer.
+
 	* coders/pcx.c (ReadPCXImage): Validate that header bytes per line
 	is sufficient to contain the indicated data.
 
